--- a/app/design/frontend/base/default/layout/qck_cielo.xml
+++ b/app/design/frontend/base/default/layout/qck_cielo.xml
@@ -8,8 +8,10 @@
 					<text>
 						<![CDATA[<script type="text/javascript">
 							Event.observe(window, 'load', function() {
-								Validation.creditCartTypes.set('EL', [false, new RegExp('^[0-9]{3}$'), false]);
-								Validation.creditCartTypes.set('AU', [false, new RegExp('^[0-9]{3}$'), false]);
+								if ($('payment_form_qck_cielo_cc') != null) {
+									Validation.creditCartTypes.set('EL', [new RegExp('^(401178|401179|431274|438935|451416|457393|457631|457632|504175|627780|636297|636368|(506699|5067[0-6][0-9]|50677[0-8])|(50900[0-9]|5090[1-9][0-9]|509[1-9][0-9]{2})|65003[1-3]|(65003[5-9]|65004[0-9]|65005[0-1])|(65040[5-9]|6504[1-3][0-9])|(65048[5-9]|65049[0-9]|6505[0-2][0-9]|65053[0-8])|(65054[1-9]|6505[5-8][0-9]|65059[0-8])|(65070[0-9]|65071[0-8])|65072[0-7]|(65090[1-9]|65091[0-9]|650920)|(65165[2-9]|6516[6-7][0-9])|(65500[0-9]|65501[0-9])|(65502[1-9]|6550[3-4][0-9]|65505[0-8]))[0-9]{10,12}$'), new RegExp('^([0-9]{3})?$'), false, new RegExp('^401178|^401179|^431274|^438935|^451416|^457393|^457631|^457632|^504175|^627780|^636297|^636368|^(506699|5067[0-6][0-9]|50677[0-8])|^(50900[0-9]|5090[1-9][0-9]|509[1-9][0-9]{2})|^65003[1-3]|^(65003[5-9]|65004[0-9]|65005[0-1])|^(65040[5-9]|6504[1-3][0-9])|^(65048[5-9]|65049[0-9]|6505[0-2][0-9]|65053[0-8])|^(65054[1-9]|6505[5-8][0-9]|65059[0-8])|^(65070[0-9]|65071[0-8])|^65072[0-7]|^(65090[1-9]|65091[0-9]|650920)|^(65165[2-9]|6516[6-7][0-9])|^(65500[0-9]|65501[0-9])|^(65502[1-9]|6550[3-4][0-9]|65505[0-8])')]);
+									Validation.creditCartTypes.set('AU', [new RegExp('^50[0-9]{14,17}$'), new RegExp('^[0-9]{3}$'), new RegExp('^50')]);
+								}
 								payment.addBeforeInitFunction('qck_cielo_cc_beforeInitFunction', function(){
 									$$('#payment_form_qck_cielo_cc_additional > li').each(function(e){
 									    $('payment_form_qck_cielo_cc').insert(e);
